# pyopenjtalk

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  LICENSE.md  MANIFEST.in  README.md  changelog.html  genindex.html  htsengine.html  index.html  objects.inv  openjtalk.html  py-modindex.html  pyopenjtalk.html  pyproject.toml  release.sh  search.html  searchindex.js  setup.py
.doctrees/: changelog.doctree  environment.pickle  htsengine.doctree  index.doctree  openjtalk.doctree  pyopenjtalk.doctree
.doctrees/notebooks/: Demo.doctree
.github/workflows/: build_whl.yml  ci.yaml  upload.yml
_modules/: index.html  pyopenjtalk.html
_sources/: htsengine.rst.txt  pyopenjtalk.rst.txt
_sources/notebooks/: Demo.ipynb.txt
_static/: documentation_options.js
docs/: Makefile  changelog.rst  conf.py  index.rst  openjtalk.rst  pyopenjtalk.rst
docs/notebooks/: Demo.ipynb
notebooks/: Demo.html
pyopenjtalk/: __init__.py  htsengine.pyx  legacy.py  openjtalk.pyx  utils.py
pyopenjtalk/htsengine/: __init__.pxd
pyopenjtalk/htsvoice/: LICENSE_mei_normal.htsvoice  LICENSE_nit.md  README.md
pyopenjtalk/openjtalk/: __init__.pxd  jpcommon.pxd  mecab.pxd  mecab2njd.pxd  njd.pxd  njd2jpcommon.pxd  text2mecab.pxd
tests/: test_htsengine.py  test_legacy.py  test_openjtalk.py
