[build-system]
requires = [
    "setuptools<v60.0",
    "cython>=0.28.0",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false # TODO: enable mypy in the future
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
